<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:custom="http://schemas.android.com/apk/res/me.xiaopan.lifespirit2" style="@style/comm_layout_body">
	<ScrollView style="@style/base_layout_fill_fill">
		<LinearLayout style="@style/comm_layout_body_content" android:paddingBottom="@dimen/base_padding_specialLarge">
			<include layout="@layout/comm_header"/>
		
			<include layout="@layout/comm_space"/>
			<include layout="@layout/comm_space"/>
			
			<me.xiaopan.lifespirit.widget.Preference style="@style/option_item_header" custom:title="@string/scenarioMode_preference_bluetooth" android:id="@+id/preference_scenarioMode_bluetooth" custom:type="enable"/>
			<me.xiaopan.lifespirit.widget.Preference style="@style/option_item_center" custom:title="@string/scenarioMode_preference_wifi" android:id="@+id/preference_scenarioMode_wifi" custom:type="enable"/>
			<me.xiaopan.lifespirit.widget.Preference style="@style/option_item_center" custom:title="@string/scenarioMode_preference_mobileNetwork" android:id="@+id/preference_scenarioMode_mobileNetwork" custom:type="enable"/>
			<me.xiaopan.lifespirit.widget.Preference style="@style/option_item_footer" custom:title="@string/scenarioMode_preference_airplanceMode" android:id="@+id/preference_scenarioMode_airplanceMode" custom:type="enable"/>
		
			<include layout="@layout/comm_space"/>
			<include layout="@layout/comm_space"/>
			
			<me.xiaopan.lifespirit.widget.Preference style="@style/option_item_header" custom:title="@string/scenarioMode_preference_volume" android:id="@+id/preference_scenarioMode_volume" custom:type="enable"/>
			<me.xiaopan.lifespirit.widget.Preference style="@style/option_item_center" custom:title="@string/scenarioMode_preference_phoneRingtone" android:id="@+id/preference_scenarioMode_phoneRingtone" custom:type="enable"/>
			<me.xiaopan.lifespirit.widget.Preference style="@style/option_item_center" custom:title="@string/scenarioMode_preference_smsRingtone" android:id="@+id/preference_scenarioMode_smsRingtone" custom:type="enable"/>
			<me.xiaopan.lifespirit.widget.Preference style="@style/option_item_center" custom:title="@string/scenarioMode_preference_notificationRingtone" android:id="@+id/preference_scenarioMode_notificationRingtone" custom:type="enable"/>
			<me.xiaopan.lifespirit.widget.Preference style="@style/option_item_footer" custom:title="@string/scenarioMode_preference_ringtoneMode" android:id="@+id/preference_scenarioMode_ringtoneMode" custom:type="enable"/>
		
			<include layout="@layout/comm_space"/>
			<include layout="@layout/comm_space"/>

			<me.xiaopan.lifespirit.widget.Preference style="@style/option_item_header" custom:title="@string/scenarioMode_preference_brightness" android:id="@+id/preference_scenarioMode_brightness" custom:type="enable"/>
			<me.xiaopan.lifespirit.widget.Preference style="@style/option_item_footer" custom:title="@string/scenarioMode_preference_dormant" android:id="@+id/preference_scenarioMode_dormant" custom:type="enable"/>
		</LinearLayout>
	</ScrollView>
    
	<include layout="@layout/comm_shadow_down"/>
</FrameLayout>