<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" style="@style/base_layout_fill_wrap_vertical" android:padding="15dp">
    <LinearLayout style='@style/layout_taskEditVolume_panel'>
        <TextView style="@style/text_taskEditVolume" android:text="@string/taskItem_volume_mediaTitle"/>
        <SeekBar style="@style/seekBar_taskEditVolume" android:id="@+id/seekBar_taskEditVolume_media"/>
    </LinearLayout>
    <LinearLayout style='@style/layout_taskEditVolume_panel'>
        <TextView style="@style/text_taskEditVolume" android:text="@string/taskItem_volume_alarmTitle"/>
        <SeekBar style="@style/seekBar_taskEditVolume" android:id="@+id/seekBar_taskEditVolume_alarm"/>
    </LinearLayout>
    <LinearLayout style='@style/layout_taskEditVolume_panel'>
        <TextView style="@style/text_taskEditVolume" android:text="@string/taskItem_volume_ringtoneTitle"/>
        <SeekBar style="@style/seekBar_taskEditVolume" android:id="@+id/seekBar_taskEditVolume_ringtone"/>
    </LinearLayout>
    <LinearLayout style='@style/layout_taskEditVolume_panel'>
        <TextView style="@style/text_taskEditVolume" android:text="@string/taskItem_volume_notificationTitle"/>
        <SeekBar style="@style/seekBar_taskEditVolume" android:id="@+id/seekBar_taskEditVolume_notification"/>
    </LinearLayout>
    <LinearLayout style='@style/layout_taskEditVolume_panel'>
        <TextView style="@style/text_taskEditVolume" android:text="@string/taskItem_volume_voiceCallTitle"/>
        <SeekBar style="@style/seekBar_taskEditVolume" android:id="@+id/seekBar_taskEditVolume_voiceCall"/>
    </LinearLayout>
    <LinearLayout style='@style/layout_taskEditVolume_panel'>
        <TextView style="@style/text_taskEditVolume" android:text="@string/taskItem_volume_systemTitle"/>
        <SeekBar style="@style/seekBar_taskEditVolume" android:id="@+id/seekBar_taskEditVolume_system"/>
    </LinearLayout>
</LinearLayout>