<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android" style="@style/comm_layout_body">
	<!-- 内容 -->   
    <LinearLayout style="@style/base_layout_body_content">
        <!-- 手动输入号码工具栏 -->
        <LinearLayout style="@style/comm_layout_toolbar_down">
		    <LinearLayout style="@style/base_layout_fill_weight">
		     	<EditText android:id="@+id/edit_messageEdit_phoneNumber" style="@style/edit_taskEditMessage_phoneNumber" android:hint="@string/messageEdit_phoneNumber_hint"/>
		     	<ImageButton android:id="@+id/button_messageEdit_add" android:src="@drawable/ic_addcontacts" style="@style/comm_button" android:contentDescription="@string/base_image_contentDescription"/>
		    </LinearLayout>
		    
			<!-- 低光 -->
		   	<TextView style="@style/base_layout_lowLight"/>
		</LinearLayout>
		
		<!-- 正文 -->
	    <FrameLayout style="@style/base_layout_fill_weight">
			<!-- 列表 -->
		    <me.xiaopan.androidlibrary.widget.PullListView style="@style/comm_list_fill"/>
			
		    <!-- 上下阴影 -->
			<RelativeLayout style="@style/base_layout_fill_fill">
				<TextView style="@style/base_shadow_down" android:layout_alignParentTop="true"/>
				<TextView style="@style/base_shadow_up" android:layout_alignParentBottom="true"/>
			</RelativeLayout>
		</FrameLayout>
		
		<!-- 删除号码工具栏 -->
		<LinearLayout style="@style/comm_layout_toolbar_up">
		    <!-- 高光 -->
	        <TextView style="@style/base_layout_highLight"/>
	        <LinearLayout android:id="@+id/layout_messageEdit_editContent" style="@style/base_layout_fill_weight" android:gravity="center">
		        <EditText android:id="@+id/edit_messageEdit_content" style="@style/edit_taskEditMessage_messageContent" android:hint="@string/messageEdit_content_hint"/>
	    		<ImageButton android:id="@+id/button_messageEdit_confirm" android:src="@drawable/ic_confirm" style="@style/comm_button" android:contentDescription="@string/base_image_contentDescription"/>
	        </LinearLayout>
	        
	        <!-- 删除联系人按钮 -->
	   		<me.xiaopan.lifespirit.widget.ImageTextButton 
	    	    android:id="@+id/button_messageEdit_remove"
		        android:src="@drawable/ic_remove"
		    	android:text="@string/messageEdit_button_removeContacts"
		    	style="@style/comm_button_remove"
		    	android:visibility="gone"/>
	    </LinearLayout>
    </LinearLayout>
    
    <!-- 阴影 -->
    <include layout="@layout/comm_shadow_down"/>
</FrameLayout>